# DFTFringe

./: appversion.h  astigscatterplot.h  astigstatsdlg.cpp  astigstatsdlg.h  astigzoomer.cpp  camwizardpage1.cpp  camwizardpage1.h  circleoutline.cpp  colormapviewerdlg.h  contourplot.cpp  contourplot.h  dftarea.cpp  dftarea.h  edgeplot.cpp  edgeplot.h  edgeplot.ui  foucaultview.cpp  igramarea.cpp  igramarea.h  igramintensity.h  imagehisto.cpp  imagehisto.h  mainwindow.cpp  mainwindow.h  meson.build  nullvariationdlg.h  outlinedialog.cpp  outlinedialog.h  pixelstats.cpp  profileplot.h  psfplot.cpp  psfplot.h  punwrap.cpp  punwrap.h  rotationdlg.cpp  rotationdlg.h  showaliasdlg.h  simulationsview.cpp  surfacemanager.cpp  surfacemanager.h  (+9 more)
