project(
  'DFTFringe',
  'cpp',
  version: '6.2',
  default_options: [
    'warning_level=0'
  ]
)

qt5_mod = import('qt5')
qt5 = dependency(
  'qt5',
  modules : [
    'Network',
    'Xml',
    'Multimedia',
    'MultimediaWidgets',
    'Widgets',
    'Concurrent',
    'Charts',
    'PrintSupport',
    'Core',
    'Gui',
    'OpenGL',
    'DataVisualization'
  ],
)

moc_headers = [
  'mainwindow.h',
  'arbitrarywavefronthelp.h',
  'arbitrarywavwidget.h',
  'defocusdlg.h',
  'edgeplot.h',
  'igramarea.h',
  'dfttools.h',
  'dftarea.h',
  'oglrendered.h',
  'pdfcalibrationdlg.h',
  'profileplot.h',
  'psiresizeimagesdlg.h',
  'surface3dcontrolsdlg.h',
  'surfacegraph.h',
  'userdrawnprofiledlg.h',
  'contourplot.h',
  'contourtools.h',
  'surfaceanalysistools.h',
  'prefsdlg.h',
  'surfacemanager.h',
  'zernikedlg.h',
  'zernikeprocess.h',
  'mirrordlg.h',
  'metricsdisplay.h',
  'reviewwindow.h',
  'wavefrontloader.h',
  'rotationdlg.h',
  'wftstats.h',
  'surfacepropertiesdlg.h',
  'colorchanneldisplay.h',
  'intensityplot.h',
  'igramintensity.h',
  'dftthumb.h',
  'vortexdebug.h',
  'simigramdlg.h',
  'wftexaminer.h',
  'savewavedlg.h',
  'usercolormapdlg.h',
  'colormapviewerdlg.h',
  'oglview.h',
  'settingsigram.h',
  'settings2.h',
  'settingsdft.h',
  'settingsdebug.h',
  'contourview.h',
  'simulationsview.h',
  'psfplot.h',
  'standastigwizard.h',
  'counterrotationdlg.h',
  'renamewavefrontdlg.h',
  'subtractwavefronatsdlg.h',
  'helpdlg.h',
  'settingsprofile.h',
  'batchigramwizard.h',
  'outlinehelpdocwidget.h',
  'statsview.h',
  'jitteroutlinedlg.h',
  'nullvariationdlg.h',
  'ccswappeddlg.h',
  'squareimage.h',
  'bathastigdlg.h',
  'zernikeeditdlg.h',
  'settingsgeneral2.h',
  'nullmarginhelpdlg.h',
  'cameracalibwizard.h',
  'camwizardpage1.h',
  'camcalibrationreviewdlg.h',
  'lensetablemodel.h',
  'unwraperrorsview.h',
  'lensdialog.h',
  'singleapplication.h',
  'singleapplication_p.h',
  'messagereceiver.h',
  'pixelstats.h',
  'averagewavefrontfilesdlg.h',
  'astigscatterplot.h',
  'wavefrontfilterdlg.h',
  'myplotpicker.h',
  'testplotclass.h',
  'rmsplot.h',
  'regionedittools.h',
  'reportdlg.h',
  'videosetupdlg.h',
  'colorchannel.h',
  'wavefrontaveragefilterdlg.h',
  'rejectedwavefrontsdlg.h',
  'filteroutlinesdlg.h',
  'foucaultview.h',
  'outlineplots.h',
  'transformwavefrontdlg.h',
  'showallcontoursdlg.h',
  'psi_dlg.h',
  'psiphasedisplay.h',
  'outlinedialog.h',
  'psitiltoptions.h',
  'contourrulerparams.h',
  'zernikesmoothingdlg.h',
  'generatetargetdlg.h',
  'astigstatsdlg.h',
  'showaliasdlg.h',
  'outlinestatsdlg.h'
]

sources = [
  'main.cpp',
  'arbitrarywavefronthelp.cpp',
  'arbitrarywavwidget.cpp',
  'cpoint.cpp',
  'defocusdlg.cpp',
  'edgeplot.cpp',
  'mainwindow.cpp',
  'igramarea.cpp',
  'circleoutline.cpp',
  'gplus.cpp',
  'Boundary.cpp',
  'graphicsutilities.cpp',
  'dfttools.cpp',
  'dftarea.cpp',
  'mikespsirinterface.cpp',
  'oglrendered.cpp',
  'pdfcalibrationdlg.cpp',
  'profileplot.cpp',
  'psiresizeimagesdlg.cpp',
  'surface3dcontrolsdlg.cpp',
  'surfacegraph.cpp',
  'surfacelightingproxy.cpp',
  'userdrawnprofiledlg.cpp',
  'wavefront.cpp',
  'contourplot.cpp',
  'contourtools.cpp',
  'dftcolormap.cpp',
  'surfaceanalysistools.cpp',
  'prefsdlg.cpp',
  'surfacemanager.cpp',
  'zernikedlg.cpp',
  'zernikeprocess.cpp',
  'mirrordlg.cpp',
  'zernikes.cpp',
  'metricsdisplay.cpp',
  'reviewwindow.cpp',
  'wavefrontloader.cpp',
  'rotationdlg.cpp',
  'wftstats.cpp',
  'surfacepropertiesdlg.cpp',
  'imagehisto.cpp',
  'colorchanneldisplay.cpp',
  'intensityplot.cpp',
  'igramintensity.cpp',
  'dftthumb.cpp',
  'vortexdebug.cpp',
  'simigramdlg.cpp',
  'punwrap.cpp',
  'wftexaminer.cpp',
  'savewavedlg.cpp',
  'usercolormapdlg.cpp',
  'colormapviewerdlg.cpp',
  'oglview.cpp',
  'settingsigram.cpp',
  'settings2.cpp',
  'settingsdft.cpp',
  'settingsdebug.cpp',
  'contourview.cpp',
  'simulationsview.cpp',
  'psfplot.cpp',
  'standastigwizard.cpp',
  'counterrotationdlg.cpp',
  'renamewavefrontdlg.cpp',
  'subtractwavefronatsdlg.cpp',
  'helpdlg.cpp',
  'settingsprofile.cpp',
  'batchigramwizard.cpp',
  'outlinehelpdocwidget.cpp',
  'statsview.cpp',
  'jitteroutlinedlg.cpp',
  'nullvariationdlg.cpp',
  'ccswappeddlg.cpp',
  'foucaultview.cpp',
  'squareimage.cpp',
  'bathastigdlg.cpp',
  'zernikeeditdlg.cpp',
  'settingsgeneral2.cpp',
  'nullmarginhelpdlg.cpp',
  'plotcolor.cpp',
  'cameracalibwizard.cpp',
  'camwizardpage1.cpp',
  'camcalibrationreviewdlg.cpp',
  'generatetargetdlg.cpp',
  'lensetablemodel.cpp',
  'unwraperrorsview.cpp',
  'lensdialog.cpp',
  'singleapplication.cpp',
  'messagereceiver.cpp',
  'myutils.cpp',
  'pixelstats.cpp',
  'utilil.cpp',
  'circlefit.cpp',
  'astigstatsdlg.cpp',
  'averagewavefrontfilesdlg.cpp',
  'astigzoomer.cpp',
  'astigscatterplot.cpp',
  'wavefrontfilterdlg.cpp',
  'myplotpicker.cpp',
  'testplotclass.cpp',
  'rmsplot.cpp',
  'regionedittools.cpp',
  'reportdlg.cpp',
  'videosetupdlg.cpp',
  'showaliasdlg.cpp',
  'colorchannel.cpp',
  'wavefrontaveragefilterdlg.cpp',
  'rejectedwavefrontsdlg.cpp',
  'outlinestatsdlg.cpp',
  'filteroutlinesdlg.cpp',
  'outlineplots.cpp',
  'transformwavefrontdlg.cpp',
  'showallcontoursdlg.cpp',
  'psi_dlg.cpp',
  'psiphasedisplay.cpp',
  'outlinedialog.cpp',
  'psitiltoptions.cpp',
  'contourrulerparams.cpp',
  'zernikesmoothingdlg.cpp',
  'utils.cpp',
]

ui_files = [
  'mainwindow.ui',
  'arbitrarywavefronthelp.ui',
  'defocusdlg.ui',
  'dfttools.ui',
  'dftarea.ui',
  'edgeplot.ui',
  'oglrendered.ui',
  'pdfcalibrationdlg.ui',
  'profilearea.ui',
  'profileplot.ui',
  'contourtools.ui',
  'psiresizeimagesdlg.ui',
  'surface3dcontrolsdlg.ui',
  'surfaceanalysistools.ui',
  'prefsdlg.ui',
  'metricsdisplay.ui',
  'userdrawnprofiledlg.ui',
  'zernikedlg.ui',
  'mirrordlg.ui',
  'wavefrontnulldlg.ui',
  'reviewwindow.ui',
  'rotationdlg.ui',
  'surfacepropertiesdlg.ui',
  'colorchanneldisplay.ui',
  'igramintensity.ui',
  'dftthumb.ui',
  'vortexdebug.ui',
  'simigramdlg.ui',
  'wftexaminer.ui',
  'savewavedlg.ui',
  'usercolormapdlg.ui',
  'colormapviewerdlg.ui',
  'settingsigram.ui',
  'settings2.ui',
  'settingsdft.ui',
  'settingsdebug.ui',
  'contourview.ui',
  'simulationsview.ui',
  'psfplot.ui',
  'standastigwizard.ui',
  'counterrotationdlg.ui',
  'renamewavefrontdlg.ui',
  'subtractwavefronatsdlg.ui',
  'helpdlg.ui',
  'settingsprofile.ui',
  'batchigramwizard.ui',
  'outlinehelpdocwidget.ui',
  'statsview.ui',
  'jitteroutlinedlg.ui',
  'nullvariationdlg.ui',
  'ccswappeddlg.ui',
  'foucaultview.ui',
  'bathastigdlg.ui',
  'zernikeeditdlg.ui',
  'settingsgeneral2.ui',
  'nullmarginhelpdlg.ui',
  'cameracalibwizard.ui',
  'camwizardpage1.ui',
  'camcalibrationreviewdlg.ui',
  'generatetargetdlg.ui',
  'unwraperrorsview.ui',
  'lensdialog.ui',
  'pixelstats.ui',
  'astigstatsdlg.ui',
  'averagewavefrontfilesdlg.ui',
  'wavefrontfilterdlg.ui',
  'regionedittools.ui',
  'reportdlg.ui',
  'videosetupdlg.ui',
  'showaliasdlg.ui',
  'wavefrontaveragefilterdlg.ui',
  'rejectedwavefrontsdlg.ui',
  'outlinestatsdlg.ui',
  'filteroutlinesdlg.ui',
  'outlineplots.ui',
  'transformwavefrontdlg.ui',
  'showallcontoursdlg.ui',
  'psi_dlg.ui',
  'psiphasedisplay.ui',
  'outlinedialog.ui',
  'psitiltoptions.ui',
  'contourrulerparams.ui',
  'zernikesmoothingdlg.ui',
]

inc = include_directories('.')

armadillo = dependency('armadillo')
opencv = dependency('opencv4')
lapack = dependency('lapack')
blas = dependency('blas')
qwt = dependency('Qt5Qwt6')

ui = qt5_mod.compile_ui(sources: ui_files)
moc = qt5_mod.compile_moc(headers: moc_headers, include_directories: inc, dependencies: qt5)
resources = qt5_mod.compile_resources(sources: ['DFTResources.qrc'])
translations = qt5_mod.compile_translations(ts_files: ['dftfringe_fr.ts'])

executable(
  'DFTFringe',
  sources : [sources, resources, ui, moc],
  include_directories: inc,
  dependencies: [armadillo, opencv, lapack, blas, qwt, qt5],
  cpp_args: ['-g', '-O0'],
)
